--- a/frontend/src/styles/onboarding.css
+++ b/frontend/src/styles/onboarding.css
@@ -22,7 +22,19 @@
     width: 100%;
     height: 100vh;
   }
-  
+
+  .login-area {
+    background: linear-gradient(to right bottom, rgb(121, 121, 240), rgb(238, 201, 201)); /* Navy Blue background color similar to GitHub theme */
+    width: 100%;
+    height: 100vh;
+  }
+
+  /* .login-area {
+    background: radial-gradient(circle, #d85344, rgb(104, 226, 104), #f2fb42);
+    width: 100%;
+    height: 100vh;
+  }
+   */
   .box-area {
     position: absolute;
     top: 0;
