came up with new approcach besides res.redirect(/auth/google) on server side because of cors issue (frontend can't access google auth link via request because it isn't authorized by google). To fix cors issue, created an /auth/login-status route which uses auth check middleware to check if user is logged. instead of redirecting to google auth form in the middlware from server side, auth check middleware now sends a 401 'not authorized' code. client will read this code and redirect to the google auth form directly from frontend. rememeber to call api/auth.login-status in a use effect at the beginning of everypage except for the home page '/'. Addressed various edge cases on loading and form pages regarding variou user states (logged in, onboarded, not logged in at all) using http response status codes. Summary Today: I learned a lot about http status codes and their usefulness especially when comunicating between your servers api and your frontend. I also learned first hand why people fucking hate cross origin resource sharing :)

--- a/frontend/src/styles/onboarding.css
+++ b/frontend/src/styles/onboarding.css
@@ -26,7 +26,7 @@
   .login-area {
     background: linear-gradient(to right bottom, rgb(121, 121, 240), rgb(238, 201, 201)); /* Navy Blue background color similar to GitHub theme */
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
 
   /* .login-area {
