Added filter button to the search page under the search bar. Need to implement its popup functionality. Also need to work on the search results page

--- a/frontend/src/styles/search.css
+++ b/frontend/src/styles/search.css
@@ -58,4 +58,12 @@
     margin-bottom: 50px;
   }
 
+  .filter-icon {
+    width: auto;
+    max-height: 38px;
+    margin-left: 5px;
+    margin-top:-10px;
+    color: #7f1e1e80
+  }
+
   
