--- a/frontend/src/styles/search.css
+++ b/frontend/src/styles/search.css
@@ -1,69 +1,82 @@
 .magGlass-nav {
-    width: 45px;
-    height: 45px;
-  }
+  width: 45px;
+  height: 45px;
+}
 
-  .magGlass-search-bar {
-    width: 50px;
-    height: 50px;
-    background-color: #2f3135;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background-size: 50px 50px;
-    margin-left: -12px;
-    margin-top: -7px;
-    padding: 10px;
-  }
-  
-  /* background-color: #f07474; */
-  .navbar-bg {
-    background-color: #4a4949;
-  }
+.magGlass-search-bar {
+  width: 50px;
+  height: 50px;
+  background-color: #2f3135;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-size: 50px 50px;
+  margin-left: -12px;
+  margin-top: -7px;
+  padding: 10px;
+}
 
-  .search-bg {
-    background-color: #202124; /* Your desired background color */
-     /* Reset default body margin */
-  }
+/* background-color: #f07474; */
+.navbar-bg {
+  background-color: #4a4949;
+}
 
-  .form-control {
-    height: 50px;
-    border-radius: 20px;
-  }
+.search-bg {
+  background-color: #202124;
+  /* Your desired background color */
+  /* Reset default body margin */
+}
 
-  .search-input {
-    background-color: #2f3135;
-    height: 50px;
-    border: none;
-    color: white;
-  }
-  
-  .search-input:focus {
-    background-color: #2f3135; /* Maintain background color on focus */
-    color: white; /* Maintain text color on focus */
-    box-shadow: none; /* Remove default focus outline */
-  }
+.form-control {
+  height: 50px;
+  border-radius: 20px;
+}
 
-  .search-input::placeholder {
-    color: #ffffff80; /* Adjust the color and alpha value as needed */
-  }
 
-  .input-group {
-    padding-left: 12px; /* Adjust padding to control button's position within the input group */
-  }
+.search-input {
+  background-color: #2f3135;
+  height: 50px;
+  border: none;
+  color: white;
+}
 
-  .logo-image {
-    max-width: 250px; /* Adjust the maximum width of the logo */
-    height: auto; /* Maintain aspect ratio */
-    margin-left: 346px;
-    margin-bottom: 50px;
-  }
+.search-input:focus {
+  background-color: #2f3135;
+  /* Maintain background color on focus */
+  color: white;
+  /* Maintain text color on focus */
+  box-shadow: none;
+  /* Remove default focus outline */
+}
 
-  .filter-icon {
-    width: auto;
-    max-height: 38px;
-    margin-left: 5px;
-    margin-top:-10px;
-    color: #7f1e1e80
-  }
+.search-input::placeholder {
+  color: #ffffff80;
+  /* Adjust the color and alpha value as needed */
+}
 
-  
+.input-group {
+  padding-left: 12px;
+  /* Adjust padding to control button's position within the input group */
+}
+
+.logo-image {
+  max-width: 250px;
+  /* Adjust the maximum width of the logo */
+  height: auto;
+  /* Maintain aspect ratio */
+  margin-left: 37.8%;
+  margin-bottom: 5.4%;
+}
+
+.filter-icon {
+  width: auto;
+  max-height: 38px;
+  margin-left: 5px;
+  margin-top: -10px;
+  color: #7f1e1e80
+}
+
+.popup-below {
+  margin-top: 3%;
+  margin-left: 3%;
+  width: 19%; /* Make the width 100% */
+}
