--- a/frontend/src/styles/history.css
+++ b/frontend/src/styles/history.css
@@ -35,3 +35,47 @@
     border: none;
     padding: 0;
 }
+
+/* CSS */
+.delete-all-button {
+  align-items: center;
+  appearance: none;
+  background-color: #4A4949;
+  border-radius: 24px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans",Roboto,Arial,sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform,opacity;
+  z-index: 0;
+}
+
+.delete-all-button:hover {
+  background: #da6262;
+  color: #ffffff;
+}
+
+.delete-all-button:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
+}
+
