3pm-12am, god damn go eat something. Knocked out alot, finished account page, finished functionality for all buttons on account page, including deleteAccount and updateFilterPreferences. Also a lot of debugging lmao. Next session: Finish Home Page, then deploy

--- a/frontend/src/styles/onboarding.css
+++ b/frontend/src/styles/onboarding.css
@@ -11,6 +11,10 @@
     font-style: normal;
     src: url('../../public/Nunito-VariableFont_wght.ttf') format('truetype');
   }
+
+  @font-face {
+    
+  }
   
   /* Optional: If you want to create a class for using Nunito font */
   .nunito {
