finished decoupling api. added oldestEmail in account page. added new font to homepage and navbar. Next session: finish adding explanatory comments to functions. remove unceccesary logging

--- a/frontend/src/styles/account.css
+++ b/frontend/src/styles/account.css
@@ -1,5 +1,4 @@
 .custom-card {
-    background-color: #202124; /* Set the background color */
-    border: 1px solid #4A4949; /* Set the outline color and style */
-    /* You can add more styles as needed */
+    background-color: #202124;
+    border: 1px solid #4A4949;
   }
