--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1,32 +1,50 @@
+@font-face {
+  font-family: 'Patrick Hand';
+  src: url('../../public/PatrickHand-Regular.ttf') format('truetype');
+}
+
+.patrick-font {
+  font-family: 'Patrick Hand';
+}
+
 .home-bg {
-    background: linear-gradient(to right bottom, rgb(121, 121, 240), rgb(238, 201, 201)); 
-    width: 100%;
-    height: 100vh;
-    background-image: url('../images/home-backdrop.png');
+  background: linear-gradient(to right bottom, rgb(121, 121, 240), rgb(238, 201, 201));
+  width: 100%;
+  height: 100vh;
+  background-image: url('../images/home-backdrop.png');
 }
 
 .magAiLogo-home {
-    height: 60px;
-    width: auto;
-    margin-right: -0.9%;
-    margin-left: 3.8%;
+  height: 60px;
+  width: auto;
+  margin-right: -0.9%;
+  margin-left: 3.8%;
 }
 
 .info-card {
-    background-color: #434852;
-    border-radius: 8px;
-    color: white;
-    border: 3px solid #777A82;
-    box-shadow: 0px 0px 4px 5px rgba(0, 0, 0, 0.2);
-  }
+  background-color: #434852;
+  border-radius: 8px;
+  color: white;
+  border: 3px solid #777A82;
+  box-shadow: 0px 0px 4px 5px rgba(0, 0, 0, 0.2);
+}
 
+.login-card {
+  background: #5F676D;
+  border-radius: 8px;
+  color: black;
+  border: 5px solid #2a2b2d;
+  /* border: 3px solid #777A82; */
+  box-shadow: 0px 0px 4px 5px rgba(0, 0, 0, 0.2);
+}
 
 .google-btn {
   width: 184px;
   height: 42px;
   background-color: #4285f4;
   border-radius: 2px;
-  box-shadow: 0 3px 4px 0 rgba(0,0,0,.25);
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .25);
+
   .google-icon-wrapper {
     position: absolute;
     margin-top: 6px;
@@ -36,6 +54,7 @@
     border-radius: 2px;
     background-color: #fff;
   }
+
   .google-icon {
     position: absolute;
     margin-top: 6px;
@@ -43,6 +62,7 @@
     width: 18px;
     height: 18px;
   }
+
   .btn-text {
     float: right;
     margin: 11px 11px 0 0;
@@ -51,9 +71,11 @@
     letter-spacing: 0.2px;
     font-family: "Roboto";
   }
+
   &:hover {
     box-shadow: 0 0 6px #4285f4;
   }
+
   &:active {
     background: #1669F2;
   }
