--- a/frontend/src/styles/search-results.css
+++ b/frontend/src/styles/search-results.css
@@ -1,8 +1,6 @@
 .results-logo-image {
     max-width: 75px;
-    /* Adjust the maximum width of the logo */
     height: auto;
-    /* Maintain aspect ratio */
     margin-left: 0%;
     margin-bottom: 0%;
   }
@@ -18,7 +16,7 @@
   .results-filter-popup {
     margin-top: 9%;
     margin-left: 12%;
-    width: 19%; /* Make the width 100% */
+    width: 19%;
   }
 
   .results-results-filter {
@@ -33,21 +31,21 @@
     border: 2px solid #4A4949;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    color: #333; /* Text color for the search result */
+    color: #333;
   }
 
   .results-sticky-container {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #202124; /* Change this to your desired background color */
-    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for visual effect */
-    z-index: 1000; /* Adjust the z-index as needed to ensure it's on top of other content */
+    background-color: #202124;
+    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
   }
   
   .sender {
     font-size: 13.5px;
-    color: #ffffff; /* Text color for the sender */
+    color: #ffffff;
     margin-bottom:1%;
   }
 
@@ -60,8 +58,4 @@
     margin-top:1%;
     font-size: 15px;
     color: #ffffff;
-  }
-
-  
-
-  
+  }  
