--- a/frontend/src/styles/search.css
+++ b/frontend/src/styles/search.css
@@ -34,7 +34,6 @@
   border-radius: 20px;
 }
 
-
 .search-input {
   background-color: #2f3135;
   height: 50px;
@@ -44,28 +43,21 @@
 
 .search-input:focus {
   background-color: #2f3135;
-  /* Maintain background color on focus */
   color: white;
-  /* Maintain text color on focus */
   box-shadow: none;
-  /* Remove default focus outline */
 }
 
 .search-input::placeholder {
   color: #ffffff80;
-  /* Adjust the color and alpha value as needed */
 }
 
 .input-group {
   padding-left: 12px;
-  /* Adjust padding to control button's position within the input group */
 }
 
 .search-logo-image {
   max-width: 250px;
-  /* Adjust the maximum width of the logo */
   height: auto;
-  /* Maintain aspect ratio */
   margin-left: 34%;
   margin-bottom: 5.4%;
 }
@@ -81,5 +73,5 @@
 .search-filter-popup {
   margin-top: 4%;
   margin-left: 3%;
-  width: 19%; /* Make the width 100% */
+  width: 19%;
 }
