--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -10,7 +10,7 @@
 .home-bg {
   background: linear-gradient(to right bottom, rgb(121, 121, 240), rgb(238, 201, 201));
   width: 100%;
-  height: 100vh;
+  height: max-content;
   background-image: url('../images/home-backdrop.png');
 }
 
@@ -22,7 +22,7 @@
 }
 
 .info-card {
-  background-color: #434852;
+  background-color: hsl(220, 10%, 29%);
   border-radius: 8px;
   color: white;
   border: 3px solid #777A82;
@@ -36,6 +36,10 @@
   border: 5px solid #2a2b2d;
   /* border: 3px solid #777A82; */
   box-shadow: 0px 0px 4px 5px rgba(0, 0, 0, 0.2);
+}
+
+.slide-card {
+  width: 120%;
 }
 
 .google-btn {
