--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -29,6 +29,17 @@
   box-shadow: 0px 0px 4px 5px rgba(0, 0, 0, 0.2);
 }
 
+.text-black-underline {
+  color: black;
+  text-decoration: underline;
+  text-decoration-color: #2579ff; /* Set underline color */
+}
+
+/* If you want to ensure that the underline color persists on hover as well: */
+.text-black-underline:hover {
+  text-decoration-color: #84aef0; /* Set underline color for hover state */
+}
+
 .login-card {
   background: #5F676D;
   border-radius: 8px;
